allow editors to edit documents which contain iframes (bug 193902, r=cmanske, sr=smfr)